@@ -1,3 +1,11 @@
+2002-11-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03476] Re: Bug#170506: w3m: Unable to use mozilla bugzilla
+	* file.c (HTMLtagproc1): initialize ignore_tag in table_mode
+		(HTMLtagproc0): check table_level
+	* table.c (feed_table_tag): set mode->ignore_tag
+	* table.h (struct table_mode): add ignore_tag
+
 2002-11-25  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03471] Re: SETPGRP()
